--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -222,6 +222,7 @@ config file, apparently.
 #+end_quote
 
 *** STARTED Create a language independent ORM layer                   :story:
+    CLOCK: [2017-03-03 Fri 11:36]
     CLOCK: [2017-03-02 Thu 09:39]--[2017-03-02 Thu 10:03] =>  0:24
     CLOCK: [2017-03-02 Thu 08:05]--[2017-03-02 Thu 09:38] =>  1:33
     CLOCK: [2017-03-02 Thu 06:48]--[2017-03-02 Thu 07:28] =>  0:40
