--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 11:35]
+#+CAPTION: Clock summary at [2017-03-03 Fri 12:47]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:42* |       |       | 100.0 |
+| *Total time*                                                                | *36:52* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:42   |       |       | 100.0 |
-| Active                                                                      |         | 35:42 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.6 |
+| Stories                                                                     | 36:52   |       |       | 100.0 |
+| Active                                                                      |         | 36:52 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.6 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.5 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.5 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.4 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.6 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   6.3 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   6.1 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   1.0 |
-| STARTED Create a language independent ORM layer                             |         |       |  7:24 |  20.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  58.2 |
+| STARTED Create a language independent ORM layer                             |         |       |  8:34 |  23.2 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  56.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -222,7 +222,8 @@ config file, apparently.
 #+end_quote
 
 *** STARTED Create a language independent ORM layer                   :story:
-    CLOCK: [2017-03-03 Fri 11:36]
+    CLOCK: [2017-03-03 Fri 12:39]--[2017-03-03 Fri 12:47] =>  0:08
+    CLOCK: [2017-03-03 Fri 11:36]--[2017-03-03 Fri 12:38] =>  1:02
     CLOCK: [2017-03-02 Thu 09:39]--[2017-03-02 Thu 10:03] =>  0:24
     CLOCK: [2017-03-02 Thu 08:05]--[2017-03-02 Thu 09:38] =>  1:33
     CLOCK: [2017-03-02 Thu 06:48]--[2017-03-02 Thu 07:28] =>  0:40
