--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 12:47]
+#+CAPTION: Clock summary at [2017-03-03 Fri 12:58]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:52* |       |       | 100.0 |
+| *Total time*                                                                | *37:02* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:52   |       |       | 100.0 |
-| Active                                                                      |         | 36:52 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.5 |
+| Stories                                                                     | 37:02   |       |       | 100.0 |
+| Active                                                                      |         | 37:02 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.5 |
 | COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.4 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.6 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   6.1 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   6.0 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   1.0 |
-| STARTED Create a language independent ORM layer                             |         |       |  8:34 |  23.2 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  56.4 |
+| STARTED Create a language independent ORM layer                             |         |       |  8:44 |  23.6 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  56.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -222,6 +222,7 @@ config file, apparently.
 #+end_quote
 
 *** STARTED Create a language independent ORM layer                   :story:
+    CLOCK: [2017-03-03 Fri 12:48]--[2017-03-03 Fri 12:58] =>  0:10
     CLOCK: [2017-03-03 Fri 12:39]--[2017-03-03 Fri 12:47] =>  0:08
     CLOCK: [2017-03-03 Fri 11:36]--[2017-03-03 Fri 12:38] =>  1:02
     CLOCK: [2017-03-02 Thu 09:39]--[2017-03-02 Thu 10:03] =>  0:24
