--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 13:39]
+#+CAPTION: Clock summary at [2017-03-03 Fri 14:57]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:41* |       |       | 100.0 |
+| *Total time*                                                                | *37:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:41   |       |       | 100.0 |
-| Active                                                                      |         | 37:41 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.4 |
+| Stories                                                                     | 37:56   |       |       | 100.0 |
+| Active                                                                      |         | 37:56 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.3 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.5 |
 | COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.3 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.5 |
 | COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.9 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   1.0 |
-| STARTED Create a language independent ORM layer                             |         |       |  9:23 |  24.9 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  55.2 |
+| STARTED Create a language independent ORM layer                             |         |       |  9:38 |  25.4 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  54.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -222,6 +222,7 @@ config file, apparently.
 #+end_quote
 
 *** STARTED Create a language independent ORM layer                   :story:
+    CLOCK: [2017-03-03 Fri 14:42]--[2017-03-03 Fri 14:57] =>  0:15
     CLOCK: [2017-03-03 Fri 13:23]--[2017-03-03 Fri 13:39] =>  0:16
     CLOCK: [2017-03-03 Fri 12:59]--[2017-03-03 Fri 13:22] =>  0:23
     CLOCK: [2017-03-03 Fri 12:48]--[2017-03-03 Fri 12:58] =>  0:10
