--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,23 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 15:36]
+#+CAPTION: Clock summary at [2017-03-03 Fri 21:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:34* |       |       | 100.0 |
+| *Total time*                                                                | *38:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:34   |       |       | 100.0 |
-| Active                                                                      |         | 38:34 |       | 100.0 |
+| Stories                                                                     | 38:42   |       |       | 100.0 |
+| Active                                                                      |         | 38:42 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.3 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.4 |
 | COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.3 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.5 |
 | COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.8 |
-| COMPLETED Setup codacy                                                      |         |       |  0:22 |   1.0 |
-| STARTED Create a language independent ORM layer                             |         |       | 10:16 |  26.6 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  53.9 |
+| COMPLETED Setup codacy                                                      |         |       |  0:22 |   0.9 |
+| COMPLETED Fix codacy warning on exceptions                                  |         |       |  0:08 |   0.3 |
+| STARTED Create a language independent ORM layer                             |         |       | 10:16 |  26.5 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  53.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -221,6 +222,13 @@ tick all boxes (all 302 of them, in my case). You can also provide a
 config file, apparently.
 #+end_quote
 
+*** COMPLETED Fix codacy warning on exceptions                        :story:
+    CLOSED: [2017-03-03 Fri 21:19]
+    CLOCK: [2017-03-03 Fri 21:11]--[2017-03-03 Fri 21:19] =>  0:08
+
+Codacy picked up on the fact that our constructor for exceptions is
+not explicit. Update template and regenerate all code.
+
 *** STARTED Create a language independent ORM layer                   :story:
     CLOCK: [2017-03-03 Fri 14:58]--[2017-03-03 Fri 15:36] =>  0:38
     CLOCK: [2017-03-03 Fri 14:42]--[2017-03-03 Fri 14:57] =>  0:15
@@ -306,11 +314,6 @@ with odb.
 
 This time has arrived now. We should create a set of concepts in yarn
 related to ORM (object-relational mapping).
-
-*** Fix codacy warning on exceptions                                  :story:
-
-Codacy picked up on the fact that our constructor for exceptions is
-not explicit. Update template and regenerate all code.
 
 *** Add a "flat directory" mode                                       :story:
 
