--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 21:20]
+#+CAPTION: Clock summary at [2017-03-03 Fri 22:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:42* |       |       | 100.0 |
+| *Total time*                                                                | *39:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:42   |       |       | 100.0 |
-| Active                                                                      |         | 38:42 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.2 |
+| Stories                                                                     | 39:50   |       |       | 100.0 |
+| Active                                                                      |         | 39:50 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   5.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.3 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.4 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.3 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.3 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.2 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.5 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.8 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.6 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   0.9 |
 | COMPLETED Fix codacy warning on exceptions                                  |         |       |  0:08 |   0.3 |
-| STARTED Create a language independent ORM layer                             |         |       | 10:16 |  26.5 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  53.7 |
+| STARTED Create a language independent ORM layer                             |         |       | 11:24 |  28.6 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  52.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -230,6 +230,9 @@ Codacy picked up on the fact that our constructor for exceptions is
 not explicit. Update template and regenerate all code.
 
 *** STARTED Create a language independent ORM layer                   :story:
+    CLOCK: [2017-03-03 Fri 22:40]--[2017-03-03 Fri 22:56] =>  0:16
+    CLOCK: [2017-03-03 Fri 22:01]--[2017-03-03 Fri 22:39] =>  0:38
+    CLOCK: [2017-03-03 Fri 21:20]--[2017-03-03 Fri 21:34] =>  0:14
     CLOCK: [2017-03-03 Fri 14:58]--[2017-03-03 Fri 15:36] =>  0:38
     CLOCK: [2017-03-03 Fri 14:42]--[2017-03-03 Fri 14:57] =>  0:15
     CLOCK: [2017-03-03 Fri 13:23]--[2017-03-03 Fri 13:39] =>  0:16
