--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-03 Fri 23:53]
+#+CAPTION: Clock summary at [2017-03-04 Sat 00:27]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:45* |       |       | 100.0 |
+| *Total time*                                                                | *41:17* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:45   |       |       | 100.0 |
-| Active                                                                      |         | 40:45 |       | 100.0 |
+| Stories                                                                     | 41:17   |       |       | 100.0 |
+| Active                                                                      |         | 41:17 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:01 |   4.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.2 |
 | COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   2.3 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.2 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   2.1 |
 | COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   1.4 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.5 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   5.4 |
 | COMPLETED Setup codacy                                                      |         |       |  0:22 |   0.9 |
 | COMPLETED Fix codacy warning on exceptions                                  |         |       |  0:08 |   0.3 |
-| STARTED Create a language independent ORM layer                             |         |       | 12:19 |  30.2 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  51.0 |
+| COMPLETED Create a language independent ORM layer                           |         |       | 12:51 |  31.1 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  50.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -229,7 +229,10 @@ config file, apparently.
 Codacy picked up on the fact that our constructor for exceptions is
 not explicit. Update template and regenerate all code.
 
-*** STARTED Create a language independent ORM layer                   :story:
+*** COMPLETED Create a language independent ORM layer                 :story:
+    CLOSED: [2017-03-03 Fri 23:59]
+    CLOCK: [2017-03-04 Sat 00:00]--[2017-03-04 Sat 00:27] =>  0:27
+    CLOCK: [2017-03-03 Fri 23:54]--[2017-03-03 Fri 23:59] =>  0:05
     CLOCK: [2017-03-03 Fri 23:28]--[2017-03-03 Fri 23:53] =>  0:25
     CLOCK: [2017-03-03 Fri 22:57]--[2017-03-03 Fri 23:27] =>  0:30
     CLOCK: [2017-03-03 Fri 22:40]--[2017-03-03 Fri 22:56] =>  0:16
@@ -525,7 +528,10 @@ sure the compiler is not in C++-14 mode when compiling test models
 in 03. Also, the mixing and matching of 03 with 14 may not be
 trivial. We should wait for a use case.
 
-It may be possible to add different flags to different projects in CMake.
+It may be possible to add different flags to different projects in
+CMake.
+
+We should call this the c++ dialect.
 
 Tasks:
 
